# Autopt

./: .gitignore  README.md  agents.py  config.py  final_report.html  final_report.md  graph.py  gui_app.py  requirements.txt  state.py
config/: agents.yaml  tasks.yaml
team/: README.md  pyproject.toml
team/src/team/: crew.py  gui_app.py  main.py
team/src/team/config/: agents.yaml  tasks.yaml
team/src/team/tools/: custom_tools.py  system_tools.py
tools/: custom_tools.py  system_tools.py
